--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
     image: nginx
     container_name: blog-www
     volumes:
-      - ./docker/nginx/blog.conf:/etc/nginx/conf.d/blog.conf
+      - ./docker/nginx/blog.conf:/etc/nginx/conf.d/default.conf
+      - ./blog:/var/www
     depends_on:
       - app
     ports:
@@ -18,6 +19,7 @@ services:
     image: mysql:5.7
     container_name: blog-db
     environment:
+      MYSQL_RANDOM_ROOT_PASSWORD: y
       MYSQL_DATABASE: blog
       MYSQL_USER: docker
       MYSQL_PASSWORD: docker
