--- a/docker/nginx/blog.conf
+++ b/docker/nginx/blog.conf
@@ -1,16 +1,14 @@
 server {
   listen 80;
-    index index.php index.html;
-    root /var/www/public;
+
+  root /var/www/public;
+  index index.php index.html;
 
   location / {
-    root /var/www/public;
-    index  index.html index.php;
-    }
+    try_files $uri $uri/ /index.php?$query_string;
+  }
 
   location ~ \.php$ {
-
-    try_files $uri =404;
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
     fastcgi_pass blog-app:9000;
     fastcgi_index index.php;
