--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,10 @@ services:
     image: mysql:5.7
     container_name: blog-db
     environment:
-      MYSQL_RANDOM_ROOT_PASSWORD: y
       MYSQL_DATABASE: blog
       MYSQL_USER: docker
       MYSQL_PASSWORD: docker
+      MYSQL_ROOT_PASSWORD: docker
       TZ: "Asia/Tokyo"
     ports:
       - 13306:3306
